# dbtonic-deprecated

./: Cargo.toml  README.md  ROADMAP.md
crates/dbtonic/: Cargo.toml
crates/dbtonic/models/: model.sql
crates/dbtonic/src/: lib.rs  main.rs
crates/dbtonic/src/cli/: mod.rs
crates/dbtonic/src/configuration/: dbtonic_config.rs  mod.rs
crates/dbtonic/src/parser/: dag.rs  mod.rs  model_node.rs
crates/dbtonic/src/rules/: mod.rs  rules_engine.rs
crates/dbtonic/src/rules/ast_rules/: contains_source_and_ref.rs
crates/dbtonic/src/rules/yml_rules/: mod.rs  model_primary_key_tests.rs  model_yaml_defined.rs
crates/dbtonic/src/utils/: README.md  mod.rs
crates/dbtonic/src/validation/: dbt_project_operations.rs  ensure_dbt_project.rs  mod.rs
crates/dbtonic/tests/: dbt_project_tests.rs
crates/dbtonic/tests/data/: combined_test_model.sql  test_model.sql
crates/dbtonic_cli/: Cargo.toml
crates/dbtonic_cli/src/: main.rs
crates/dbtonic_sqlparser/: Cargo.toml  README.md
crates/dbtonic_sqlparser/derive/: Cargo.toml
crates/dbtonic_sqlparser/examples/: cli.rs  parse_select.rs
crates/dbtonic_sqlparser/src/: keywords.rs  lib.rs  parser.rs  test_utils.rs  tokenizer.rs
crates/dbtonic_sqlparser/src/ast/: data_type.rs  ddl.rs  mod.rs  operator.rs  query.rs  value.rs  visitor.rs
crates/dbtonic_sqlparser/src/ast/helpers/: stmt_data_loading.rs
crates/dbtonic_sqlparser/src/dialect/: ansi.rs  bigquery.rs  clickhouse.rs  generic.rs  hive.rs  mod.rs  mssql.rs  mysql.rs  postgresql.rs  redshift.rs  snowflake.rs  sqlite.rs
crates/dbtonic_sqlparser/tests/: sqlparser_bigquery.rs  sqlparser_clickhouse.rs  sqlparser_common.rs  sqlparser_custom_dialect.rs  sqlparser_hive.rs  sqlparser_mssql.rs  sqlparser_mysql.rs  sqlparser_postgres.rs  sqlparser_redshift.rs  sqlparser_regression.rs  sqlparser_snowflake.rs  sqlparser_sqlite.rs
crates/dbtonic_sqlparser/tests/test_utils/: mod.rs
crates/dbtranslate/: Cargo.toml
crates/dbtranslate/derive/: Cargo.toml
crates/dbtranslate/src/: lib.rs  parser.rs  test_utils.rs  tokenizer.rs  tokens.rs
crates/dbtranslate/src/ast/: mod.rs  query.rs
crates/dbtranslate/src/dialect/: mod.rs  postgresql.rs  snowflake.rs
crates/dbtranslate/tests/: sqlparser_bigquery.rs  sqlparser_common.rs  sqlparser_postgres.rs  sqlparser_redshift.rs  sqlparser_regression.rs  sqlparser_snowflake.rs
crates/dbtranslate/tests/queries/tpch/: 15.sql
crates/dbtranslate/tests/test_utils/: mod.rs
crates/dbtranslate_two/: Cargo.toml  README.md  matching.md  prompts.md  tt.md
crates/dbtranslate_two/src/: errors.rs  lib.rs  tokenizer.md  tokenizer.rs  tokens.rs  trie.rs
crates/dbtranslate_two/src/rust_references/: lifetimes.md
docs/: configuration.md  installation.md  rules.md
embeddings/: README  output.txt  prompts.md  prompts.txt  requirements.txt  sqlglot_test.py  sqlparser-rs-embedding.py  sqlparser-rs-text-creator.py
src/: main.rs
src/cli/: evaluate_functions.rs  mod.rs
src/fixtures/: valid_sql_file.sql
src/parser/: README.md  dag.rs  exceptions.rs  extractor.rs  mod.rs  model_node.rs  model_yaml.rs  parser_functions.rs  visits.rs
src/rules/: rules_engine.rs
src/rules/ast_rules/: contains_multiple_sources.rs  contains_no_source_or_ref.rs
src/rules/yml_rules/: mod.rs  model_primary_key_tests.rs  model_yaml_defined.rs
src/rules_engine/: mod.rs  rules_validator.rs
src/rules_engine/ast_rules/: contains_multiple_sources.rs  contains_no_source_or_ref.rs  contains_source_and_ref.rs  mod.rs
src/rules_engine/utils/: mod.rs  model_validation_rule.rs
src/tokenizer/: README.md  mod.rs  tokenizer.rs  tokens.rs  trie.rs
src/utils/: README.md  directory_operations.rs  mod.rs  printing.rs  string_edits.rs
src/validation/: README.md
tests/data/: test_model.yml
