[package]
name = "dbtonic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0"
glob = "0.3.0"
regex = "1.5.4"
ansi_term = "0.12.1"
colored = "2.0.0"
rayon = "1.5.1"
tree-sitter = "0.19"
thiserror = "1.0.25"
tempfile = "3.2.0"

[dependencies.tree-sitter-jinja2]
git = "https://github.com/dbt-labs/tree-sitter-jinja2"
branch = "SEMANTIC-222_scoped_functions_and_integers"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
