[package]
name = "dbtonic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0"
glob = "0.3.0"
regex = "1.5.4"
ansi_term = "0.12.1"
colored = "2.0.0"
rayon = "1.5.1"
tree-sitter = "0.19"
thiserror = "1.0.25"
tempfile = "3.2.0"
sqlparser = { path = "/Users/callummccann/repos/sqlparser-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.95"
anyhow = "1.0"

