[package]
name = "dbtonic_sqlparser"
description = "A fork of sqlparser specifically for dbtonic. Long live Andy Grove and his amazing work."
version = "0.1.0"
authors = ["Callum McCann <cmccann51@gmail.com>"]
homepage = "https://github.com/sqlparser-rs/sqlparser-rs"
keywords = ["ansi", "sql", "lexer", "parser"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"

[lib]
name = "sqlparser"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# Enable JSON output in the `cli` example:
json_example = ["serde_json", "serde"]
visitor = ["sqlparser_derive"]

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"], optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json is only used in examples/cli, but we have to put it outside
# of dev-dependencies because of
# https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0", optional = true }
sqlparser_derive = { version = "0.1.1", path = "derive", optional = true }

[dev-dependencies]
simple_logger = "4.0"
matches = "0.1"
pretty_assertions = "1"

[package.metadata.release]
# Instruct `cargo release` to not run `cargo publish` locally:
# https://github.com/sunng87/cargo-release/blob/master/docs/reference.md#config-fields
# See docs/releasing.md for details.
publish = false

[package.metadata.docs.rs]
# Document these features on docs.rs
features = ["serde", "visitor"]
